--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -505,14 +505,14 @@ button {
 }
 
 .skills__html {
-  width: 90%;
+  width: 100%;
 }
 
 .skills__css {
   width: 70%;
 }
 .skills__materialui {
-  width: 20%;
+  width: 70%;
 }
 
 .skills__js {
@@ -522,13 +522,19 @@ button {
 .skills__react {
   width: 50%;
 }
+.skills__angular {
+  width: 85%;
+}
 
 .skills__typescript {
-  width: 25%;
+  width: 85%;
+}
+.skills__oracle {
+  width: 60%;
 }
 
 .skills__java {
-  width: 50%;
+  width: 70%;
 }
 
 .skills__node {
