--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -127,7 +127,7 @@ a {
   text-decoration: none;
 }
 img {
-  max-width: 100%;
+  // max-width: 100%;
   height: auto;
 }
 
@@ -383,14 +383,13 @@ img {
 /*==================== ABOUT ====================*/
 .about {
   &__img {
-    width: 200px;
+    width: 400px;
     border-radius: 0.5rem;
     justify-self: center;
     align-self: center;
   }
   &__description {
     text-align: center;
-    margin-bottom: var(--mb-2-5);
   }
   &__info {
     display: flex;
