scss file update

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -541,7 +541,7 @@ img {
   }
   &__data {
     display: grid;
-    grid-template-columns: 1fr max-content 1fr;
+    grid-template-columns: 400px max-content 400px;
     column-gap: 1.5rem;
   }
   &__title {
